# crack-my-math-captcha

./: Dockerfile  Makefile  README.md  captcha.py  captcha_test.py  crack.py  pyproject.toml  server.py
.github/workflows/: docker-image.yml
assets/: style.css
templates/: base.html  index.html  submit.html
