[project]
name = "crack-my-math-captcha"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathieu Lecarme",email = "mathieu@garambrogne.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "aiohttp-jinja2 (>=1.6,<2.0)",
    "cryptography (>=46.0.1,<47.0.0)",
    "aiohttp-session (>=2.12.1,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
